# zentyping

./: .app.py.swp  .eslintrc.cjs  .gitignore  Dockerfile  README.md  app.py  index.html  package-lock.json  package.json  requirements.txt  sample_generater.py  tsconfig.app.json  tsconfig.json  webpack.config.js
app/: __init__.py  config.py  main.py  setup.py
backend/: dbon.sh  requirements.txt
data_test_manager/: user_info.py
db/: Cargo.toml  README.md  package.json
doc/: No.1  play function module.md
frontend/: .eslintrc.cjs  README.md  bun.lockb  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
game/: play.css  play.html  play.js
getq/: getq.css  getq.html  getq.js
just typing/: package-lock.json  package.json
modetyping-api/: .gitignore  README.md  app.py
odai/: long.json  normal.json  short.json
server/: Cargo.toml  Dockerfile  config.ts  index.ts  interface.ts  package.json  tsconfig.json
server/db/insert/: insert.ts  python.json  ts.json
server/middleware/: dev.ts
server/module/: db.ts
server/module/auth/: signin_login.ts
server/module/code/: format.ts  syntax.ts
server/router/: auth.ts  code.ts
server/src/: config.rs  main.rs
server/src/module/: db.rs
server/static/: index.css  index.html  index.js
server/static/assets/: index-7kUEI2V8.css  index-Cw5l22LF.js  index-Dt4hpPFl.js  index-W1zczZTJ.css  index-hSOKGuJb.css
server/test/: api.test.ts  db.test.ts  syntax.test.ts
src/: App.vue  Getq.vue  Play.vue  main.js  main.ts  playcopy.txt  router.ts
(+156 files in other folders)
