[package]
name = "zenn-typing"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = "2.0"
jsonwebtoken = "8.0"
dotenv = "0.15"
